--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="input-section">
             <label for="char">Enter the character to count:</label>
-            <input type="text" id="char" maxlength="1" placeholder="e.g., l">
+            <input type="text" id="char" placeholder="e.g., l">
         </div>
 
         <button id="countBtn">Count Frequency</button>
